--- a/darkshair.css
+++ b/darkshair.css
@@ -5,7 +5,7 @@
 }
  ::-webkit-scrollbar{
      width: 12px;
-     cursor: url(https://i.imgur.com/xZ0AKJk.png), auto !important;
+     cursor: url(https://i.imgur.com/zMVEQi9.png), auto !important;
 }
  ::-webkit-scrollbar-thumb{
      background-color: #5b7019;
