--- a/darkshair.css
+++ b/darkshair.css
@@ -38,7 +38,7 @@
     bottom: -5px;
 }
  #quest-log-window {
-     background-image: url(https://i.imgur.com/WonrKKw.png);
+     background-image: url(https://i.imgur.com/6lbFv3f.png);
  }
 .questlist p{
      color: #218421;
