--- a/darkshair.css
+++ b/darkshair.css
@@ -23,7 +23,7 @@
 }
  .checkbox-gd{
      height: 18px;
-     background: url(https://i.imgur.com/rCP0uw0.png) no-repeat top left;
+     background: url(https://i.imgur.com/146GCjx.png) no-repeat top left;
      padding: 4px 30px 0;
      margin-bottom: 4px;
      background-position-y: 0px;
@@ -32,7 +32,7 @@
      background-position-y: -22px;
 }
 .changeClient{
-    background-image: url(https://i.imgur.com/tUppas0.png);
+    background-image: url(https://i.imgur.com/T9c0YhM.png);
     width: 93px;
     heigth: 29px;
     bottom: -5px;
@@ -44,7 +44,7 @@
      color: #218421;
 }
 #shop_recover_items, #create_new_clan, #create_new_clan:hover{
-    background-image: url(https://i.imgur.com/KZuNvQy.png);
+    background-image: url(https://i.imgur.com/Z7d0UAt.png);
 }
 #tip.t_shair b{
     display: inline;
@@ -69,16 +69,16 @@
     padding-left: 6px;
 }
 #corners img.border-u {
-    background-image: url(https://i.imgur.com/zTuuNRc.png);
+    background-image: url(https://i.imgur.com/jv0Ullj.png);
 }
 #corners img.border-d {
-    background-image: url(https://i.imgur.com/zdxJFDP.png);
+    background-image: url(https://i.imgur.com/FkSwRi6.png);
 }
 #corners img.border-l {
-    background-image: url(https://i.imgur.com/GkRM9lu.png);
+    background-image: url(https://i.imgur.com/GbXZdVx.png);
 }
 #corners img.border-r {
-    background-image: url(https://i.imgur.com/85fD78n.png);
+    background-image: url(https://i.imgur.com/EWiDCOn.png);
 }
 #party img{
     display: block;
@@ -88,7 +88,7 @@
     width: 100px;
     height: 7px;
     padding-left: 100px;
-    background-image: url(https://i.imgur.com/2VukM72.png);
+    background-image: url(https://i.imgur.com/rQCUxIT.png);
 }
 #slotsForItems {
     margin-left: 3px;
@@ -103,7 +103,7 @@
     top: 475px;
     width: 68px;
     height: 20px;
-    background:url(https://i.imgur.com/HkOIRGg.png);
+    background:url(https://i.imgur.com/Lbk2d0F.png);
 }
 .shair-item-slot {
     width: 33px;
@@ -112,7 +112,7 @@
     margin: 7px;
     position: relative;
     vertical-align: top;
-    background:url(https://i.imgur.com/ZxrwgpS.png);
+    background:url(https://i.imgur.com/s8eKfIG.png);
     transition: box-shadow 250ms;
     border-radius: 0 8px 0 8px;	
 }
@@ -120,10 +120,10 @@
 	pointer-events: none;
 }
 .table-header.hover-header, .table-header {
-    background: url(https://i.imgur.com/F2QFLni.png) !important;
+    background: url(https://i.imgur.com/Cp5fVuX.png) !important;
 }
 .SI-button .left{
-    background:url(https://i.imgur.com/IL6scQa.png);
+    background:url(https://i.imgur.com/2qstFPx.png);
     background-position: -443px -229px;
 }
 .SI-button .label{
