--- a/darkshair.css
+++ b/darkshair.css
@@ -1032,7 +1032,7 @@ html:before{
      top:515px;
      width: 68px;
      height: 20px;
-     background:url(https://i.imgur.com/X9wSaFO.png);
+     background:url(https://i.imgur.com/oJvukuX.png);
 }
  .dodatkion{
      position:absolute;
