--- a/darkshair.css
+++ b/darkshair.css
@@ -327,13 +327,13 @@ html:before{
      background-color: transparent;
 }
  #loot-preview{
-     background-image: url(https://i.imgur.com/r4HiBZK.png);
+     background-image: url(https://i.imgur.com/8TmmWqR.png);
 }
  #match-details-wnd .match-details-title{
-     background-image: url(https://i.imgur.com/wtismfd.png);
+     background-image: url(https://i.imgur.com/40LGimd.png);
 }
  #inbox .mailnick{
-     background-image: url(https://i.imgur.com/nTDF68K.png);
+     background-image: url(https://i.imgur.com/8DgNS3f.png);
 }
  #inbox .onemail .fraudInfo{
      color: #ff0000;
@@ -352,7 +352,7 @@ html:before{
      border-top: 3px double #5b7019;
 }
  #shop_close, #shop_accept, #match-details-wnd .close-match-details-wrapper .close-match-details{
-     background-image: url(https://i.imgur.com/k9EqARC.png);
+     background-image: url(https://i.imgur.com/5SeoEip.png);
 }
  #inbox .mhead, hv {
      border-bottom: none;
@@ -365,24 +365,24 @@ html:before{
      background: #10141C;
 }
  #inbox, #inbox .onemail{
-     background-image: url(https://i.imgur.com/fPGQvZz.png) !important;
+     background-image: url(https://i.imgur.com/TvRaeOE.png) !important;
      color: #5B7019;
 }
 #clanbox .clan-skills-content .scroll-wrapper .scroll-pane .one-clan-skill{
      background: rgba(91, 84, 84, 0.31);
 }
  #inbox .newmsgout{
-     background-image: url(https://i.imgur.com/0S1Ootz.png);
+     background-image: url(https://i.imgur.com/JMR9Waa.png);
 }
  #auctions .even TD{
      background-color: #10141C;
      font: 12px "Lato", sans-serif;
 }
  #mails{
-     background-image: url(https://i.imgur.com/q5FnZqY.png);
+     background-image: url(https://i.imgur.com/PmTRs4u.png);
 }
  #inbox BUTTON{
-     background-image: url(https://i.imgur.com/1oOCtn2.png) !important;
+     background-image: url(https://i.imgur.com/plxr8al.png) !important;
 }
  #auctions .ahitem, #ah_filter, #auctions .redback, #auctions TH, #auctions TD{
      background-color: #10141C;
