--- a/darkshair.css
+++ b/darkshair.css
@@ -897,7 +897,7 @@ html:before{
      border-top-left-radius: 100%;
 }
  #exp2{
-     background-image:url(https://i.imgur.com/MYPC5Df.png) !important;
+     background-image:url(https://i.imgur.com/KMrHjMn.png) !important;
 }
  #life1,#life2{
      top:91px;
