--- a/darkshair.css
+++ b/darkshair.css
@@ -1100,7 +1100,7 @@ html:before{
     box-shadow: 0px 0px 0px 0px #34a333;	
 }
 #right-icons a[data-icon] {
-    filter: grayscale(0.8) contrast(110%);
+    filter: grayscale(1.0) contrast(110%);
 }
 
 .shair-item-slot {
@@ -1116,7 +1116,7 @@ html:before{
 }
 
 #right-icons {
-   border: 1px solid #c75108;
+   border: 1px solid #949494;
 }
 
 #corners img {
