--- a/darkshair.css
+++ b/darkshair.css
@@ -631,7 +631,7 @@ html:before{
     margin: 3px;
 }
 .shairVersions div.active {
-    box-shadow: 0px 0px 8px 1px #5b7019;
+    box-shadow: 0px 0px 8px 1px #000000;
 }
  .expAnimation{
      position: absolute;
