--- a/darkshair.css
+++ b/darkshair.css
@@ -800,6 +800,9 @@ html:before{
  .skills_tab_header{
      background-image: url(https://i.imgur.com/uBmGxpH.png);
 }
+ DIV#bm_edit_panel{
+     background-image: url(https://i.imgur.com/qyUBAdN.png);
+}
  #inpchat{
      background-image:url(https://i.imgur.com/yjxN9IN.png);
 }
