--- a/darkshair.css
+++ b/darkshair.css
@@ -1025,7 +1025,7 @@ html:before{
      display:none !important;
 }
  * {
-     cursor: url(https://i.imgur.com/ziuWzSg.png), auto;
+     cursor: url(https://i.imgur.com/13K6yky.png), auto;
 }
 .shairVersions div.active, .shairVersions div, .bal_cancel, #myfrscrollbar, #myenscrollbar, .otchlannew, .dodatkionpub, .dodatkion, .tworcy-icon, #loot-preview .close-but, .MM-queue-button, .uninstall-icon, .checkbox-gd, .header-wrapper .close-button, .header .close-button, #addons .description *, .menu_element, .bal_yes, .bal_no, .MM-button *, .close-chests-window, .skillbox_icon, .skillbox_icon_holder, .skillbox, #a_ok.bal_ok, #chatscrollbar, #pre-premium-panel .tiles-wrapper .pre-premium-panel-tile, .close-pre-premium, .graph.sl-cl, .header-txt, .graph,shop-cl, .graph.chest-cl, .graph.for-you-cl, .MM-stat-button, .MM-fight-button, .MM-rank-button, .MM-stat-header, .MM-fight-header, .MM-rank-header, .closebut, .ustawienia, #chattxt .chnick, #chattxt U, #chat, #chattabs, #chattabs s, #chat.left, #chattabs.left, .rightStatBut, .MM-battleset-switch-button, #cfg_options > div, [onclick], [href], [onclick] > *{
      cursor: url(https://i.imgur.com/zr6Nk8Q.png), auto !important;
