--- a/darkshair.css
+++ b/darkshair.css
@@ -949,7 +949,7 @@ html:before{
 }
  #nick{
      color: white;
-     text-shadow: 0px 0px 8px #006400, 0px 0px 8px #006400, 0px 0px 8px #006400;
+     text-shadow: 0px 0px 8px #006400, 0px 0px 8px #006400, 0px 0px 8px #8f8f8f;
      font-family:"Lato",sans-serif;
 }
  .a2 {
