--- a/darkshair.css
+++ b/darkshair.css
@@ -842,6 +842,7 @@ html:before{
  #cfg_options DIV{
      color: #595959;
      font: 13px "Lato", sans-serif;
+     background-image: url(https://i.imgur.com/rblIQhr.png);
 }
 .my-checkbox, .my-checkbox.active{
      color: #595959;
