--- a/darkshair.css
+++ b/darkshair.css
@@ -842,12 +842,12 @@ html:before{
  #cfg_options DIV{
      color: #595959;
      font: 13px "Lato", sans-serif;
-     background-image: url(https://i.imgur.com/rblIQhr.png);
+     background: url(https://i.imgur.com/z1YcahF.png);
 }
 .my-checkbox, .my-checkbox.active{
      color: #595959;
      font: 13px "Lato", sans-serif;
-     background: url(https://i.imgur.com/z1YcahF.png);
+     background-image: url(https://i.imgur.com/z1YcahF.png);
 }
  #pre-premium-panel .close-pre-premium, #recipes .close-but, #chests-window .close-chests-window, #loot-preview .close-but{
      background-image: url(https://i.imgur.com/EOuQSXv.png);
