--- a/darkshair.css
+++ b/darkshair.css
@@ -490,6 +490,9 @@ html:before{
  .MM-dialog-header{
      background-image: url(https://i.imgur.com/IMdI8sY.png);
 }
+ .MM-button .content, .MM-button .left, .MM-button .right {
+     background-image: url(https://i.imgur.com/2qstFPx.png);
+}
  .MM-dialog-header-txt, .MM-big-button-header{
      background-image: url(https://i.imgur.com/2qstFPx.png) !important;
 }
